--- a/LMSA/pom.xml
+++ b/LMSA/pom.xml
@@ -7,24 +7,31 @@
         <maven.compiler.source>3.6</maven.compiler.source>
         <maven.compiler.target>3.6</maven.compiler.target>
     </properties>
+
     <groupId>org.example</groupId>
     <artifactId>LMSA</artifactId>
     <version>1.0-SNAPSHOT</version>
     <dependencies>
         <dependency>
             <groupId>org.openjfx</groupId>
-            <artifactId>javafx-fxml</artifactId>
-            <version>20-ea+4</version>
+            <artifactId>javafx-graphics</artifactId>
+            <version>21-ea+17</version>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.28</version>
+        </dependency>
+
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
-            <version>20-ea+4</version>
+            <version>21-ea+17</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
-            <artifactId>javafx-graphics</artifactId>
-            <version>20-ea+4</version>
+            <artifactId>javafx-fxml</artifactId>
+            <version>21-ea+17</version>
         </dependency>
     </dependencies>
 
